css/index.css
/* body {
  overflow-x: hidden;
} */
@media (min-width: 1220px) {
  .first {
    height: 100vh;
    background-color: #f7efff;
    position: relative;
  }
  /* header */
  header {
    display: flex;
    /* border: 1px solid red; */
    padding: 0px 20px;
    padding-top: 20px;
    justify-content: space-between;
    position: fixed;
    z-index: 10;
    width: 100%;
  }
  .logo img {
    width: 85px;
    display: block;
  }
  header img {
    width: 85px;
    display: block;
  }
  header nav img {
    /* border: 1px solid red; */
    cursor: pointer;
  }
  /* Profile */
  h2 {
    /* border: 1px solid red; */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
  }
  /* down */
  .first .down {
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  .down p {
    font-weight: bold;
    font-size: 55px;
    font-family: "Cause", cursive;
  }

  .down img {
    width: 55px;
    display: block;
    margin: 0px auto;
  }
  /* contents */
  .con01 {
    height: 100vh;
    background-color: #e9dff4;
  }

  /* con02 */
  .con02 {
    height: 100vh;
    background-color: #ffead7;
    position: relative;
  }
  .con02 .Project1 {
    /* border: 1px solid red; */
    display: flex;
    gap: 6rem;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 100%;
    top: 15%;
  }

  /* li cafe */
  .con02 .cafe {
    padding-bottom: 500px;
  }
  .con02 .cafe h3 {
    font-size: 3.5rem;
  }
  .con02 .cafe > p {
    margin: 30px 0px;
    font-size: 27px;
  }
  /* li a1 img */
  .con02 .a1 {
    display: flex;
    gap: 1rem;
    /* position: absolute;
    left: 23%;
    top: -20%; */
  }
  .con02 .a1 img {
    display: block;
  }
  .con02 .a1 div:nth-child(2) {
    padding-top: 370px;
  }
  /* tool */

  .con02 .cafe .tool {
    font-size: 20px;
    display: flex;
    gap: 1rem;
    align-items: center;
  }
  .con02 .tool > p {
    font-size: 25px;
  }
  .con02 .cafe .tool img {
    object-fit: cover;
    width: 30px;
  }
  .con02 .tool > img {
    width: 20px;
  }
  /* link */
  .con02 .link {
    border: 1px solid #000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 150px;
    margin-top: 30px;
  }
  .con02 .link a:first-child {
    padding: 4px;
  }
  .con02 .link a > img {
    display: block;
    width: 30px;
  }

  /* con03 */
  .con03 {
    height: 100vh;
    background-color: #d3e5f8;
    position: relative;
  }
  .con03 .Project2 {
    /* border: 1px solid red; */
    display: flex;
    gap: 6rem;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 100%;
    top: 15%;
  }

  /* li society */
  .con03 .society {
    padding-bottom: 420px;
  }
  .con03 .society h4 {
    font-size: 3.5rem;
  }
  .con03 .society > p {
    margin: 30px 0px;
    font-size: 27px;
  }
  /* li type img */

  .con03 .type {
    display: flex;
    gap: 1rem;
  }
  .con03 .type img {
    display: block;
  }
  .con03 .type div:nth-child(2) {
    padding-top: 208px;
  }
  .con03 .type div:nth-child(1) {
    padding-top: 400px;
  }
  /* tool_1 */

  .con03 .society .tool_1 {
    font-size: 20px;
    display: flex;
    gap: 1rem;
    align-items: center;
  }
  .con03 .tool_1 > p {
    font-size: 25px;
  }
  .con03 .society .tool_1 img {
    object-fit: cover;
    width: 30px;
  }
  .con03 .tool_1 > img {
    width: 20px;
  }
  /* link_1 */
  .con03 .link_1 {
    border: 1px solid #000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 150px;
    margin-top: 30px;
  }
  .con03 .link_1 a:first-child {
    padding: 4px;
  }
  .con03 .link_1 a > img {
    display: block;
    width: 30px;
  }

  /* con4 */
  .con04 {
    background-color: #fdfbef;
    height: 100vh;
    position: relative;
  }
  .con04 > p {
    font-size: 3.5rem;
    font-weight: bold;
    position: absolute;
    top: 15%;
    left: 5%;
  }
  /* 설명 */
  .con04 .k-feat {
    /* border: 1px solid red; */
    position: absolute;
    top: 45%;
    left: 5%;
  }
  .con04 .k-feat p:first-child {
    font-size: 3rem;
  }
  .con04 .k-feat p:nth-child(2) {
    /* border: 1px solid red; */
    font-size: 2.5rem;
    margin: 20px 0px;
  }
  .con04 .k-feat p:last-child {
    /* border: 1px solid red; */
    font-size: 1.5rem;
    margin: 20px 0px;
  }
  /* team_tool */
  .con04 .team {
    width: 50%;
    position: absolute;
    left: 5%;
    bottom: 10%;
  }
  .con04 .team_tool {
    font-size: 20px;
    display: flex;
    gap: 1rem;
    align-items: center;
  }
  .con04 .team_tool > p {
    font-size: 45px;
  }
  .con04 .team .team_tool img {
    object-fit: cover;
    width: 35px;
  }

  /* team_link */
  .con04 .team_link {
    border: 1px solid #000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 175px;
    margin-top: 30px;
  }
  .con04 .team_link a:first-child {
    padding: 4px;
  }
  .con04 .team_link a > img {
    display: block;
    width: 30px;
  }
}
/* ... */

